--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,7 +9,7 @@
     padding: 0;
 }
 .container {
-    width: 1140px;
+    max-width: 1140px;
     margin: 0 auto;
 }
 
@@ -28,3 +28,5 @@
 @import 'blocks/resume';
 @import 'blocks/skills';
 @import 'blocks/portfolio';
+@import 'blocks/carusel';
+
