--- a/scss/blocks/_title.scss
+++ b/scss/blocks/_title.scss
@@ -8,6 +8,8 @@
         line-height: 21px;
         &_location{
             color: black;
+            font-size: 14px;
+            line-height: 21px;
         }
 
     }
@@ -15,6 +17,11 @@
         color: #fff; 
         font-size: 16px;
         line-height: 24px;
+        &_location{
+            color: black;
+            font-size: 14px;
+            line-height: 21px;
+        }
     }
     &_fz20{
         font-size: 20px;
